--- a/doudian/pom.xml
+++ b/doudian/pom.xml
@@ -31,6 +31,10 @@
             <artifactId>commons-dbutils</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>fluent-hc</artifactId>
         </dependency>
