修改构建配置，分支操作插件配置

--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
                 <version>1.15.0</version>
                 <configuration>
                     <gitFlowConfig>
-                        <productionBranch>main</productionBranch>
+                        <productionBranch>master</productionBranch>
                         <versionTagPrefix>v</versionTagPrefix>
                     </gitFlowConfig>
                     <versionDigitToIncrement>1</versionDigitToIncrement>
