--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>doudian</module>
+        <module>doudian-spring-boot-autoconfigure</module>
+        <module>doudian-spring-boot-starter</module>
     </modules>
     <packaging>pom</packaging>
     <name>doudian-parent</name>
