--- a/doudian/pom.xml
+++ b/doudian/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>commons-dbutils</artifactId>
         </dependency>
         <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>fluent-hc</artifactId>
         </dependency>
